--- a/resources/assets/scss/pages/home/_home.scss
+++ b/resources/assets/scss/pages/home/_home.scss
@@ -26,6 +26,15 @@
     }
 }
 
+[data-page=home] {
+    .indicator {
+        .forum-icon {
+            display:none;
+        }
+    }
+}
+
+
 .account-creation {
     > .inner {
 
