--- a/resources/assets/scss/core/_module.scss
+++ b/resources/assets/scss/core/_module.scss
@@ -102,6 +102,19 @@
         text-align:center;
         margin: 40px 0;
     }
+
+    .congrats-container {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 0;
+        left: 0;
+        opacity: 0;
+        visibility: hidden;
+    }
 }
 
 .actions {
@@ -205,4 +218,8 @@
         }
     }
 }
+
+/*TODO: Might want to create a module folder, for misc shared module styles*/
+
+
 
