--- a/resources/assets/scss/core/_settings.scss
+++ b/resources/assets/scss/core/_settings.scss
@@ -16,3 +16,5 @@ $transition: 300ms $ease;
 $breakpoint-default-feature: 'max-width';
 $break-620 : 620px; // window padding collapses
 $break-800 : 800px; // indicator folds down
+$break-920 : 920px; // fake-email gets smaller.
+$break-1024 : 1024px; // fake-email gets smaller.
