--- a/public/css/main.css
+++ b/public/css/main.css
@@ -523,25 +523,26 @@ p a:hover {
   width: 100%;
   height: 100%;
   visibility: hidden;
+  min-width: 320px;
 }
-/* line 10, ../../resources/assets/scss/core/_module.scss */
+/* line 11, ../../resources/assets/scss/core/_module.scss */
 .module > .module-section > .inner {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-/* line 16, ../../resources/assets/scss/core/_module.scss */
+/* line 17, ../../resources/assets/scss/core/_module.scss */
 .module > .module-section.has-container {
   padding: 50px;
   z-index: 2;
 }
 @media (max-width: 620px) {
-  /* line 16, ../../resources/assets/scss/core/_module.scss */
+  /* line 17, ../../resources/assets/scss/core/_module.scss */
   .module > .module-section.has-container {
     padding: 0 !important;
   }
 }
-/* line 24, ../../resources/assets/scss/core/_module.scss */
+/* line 25, ../../resources/assets/scss/core/_module.scss */
 .module > .module-section.has-container > .inner {
   width: 100%;
   height: 100%;
@@ -551,15 +552,15 @@ p a:hover {
   overflow: hidden;
 }
 
-/* line 37, ../../resources/assets/scss/core/_module.scss */
+/* line 38, ../../resources/assets/scss/core/_module.scss */
 .has-text {
   padding: 50px;
 }
-/* line 41, ../../resources/assets/scss/core/_module.scss */
+/* line 42, ../../resources/assets/scss/core/_module.scss */
 .has-text.module-section > .inner {
   display: block;
 }
-/* line 47, ../../resources/assets/scss/core/_module.scss */
+/* line 48, ../../resources/assets/scss/core/_module.scss */
 .has-text > .inner .content {
   width: 445px;
   margin: 0 auto;
@@ -568,17 +569,24 @@ p a:hover {
   color: #252e33;
   padding: 40px 0 60px 0;
 }
-/* line 57, ../../resources/assets/scss/core/_module.scss */
+@media (max-width: 500px) {
+  /* line 48, ../../resources/assets/scss/core/_module.scss */
+  .has-text > .inner .content {
+    width: 100%;
+    padding: 60px 20px 20px;
+  }
+}
+/* line 62, ../../resources/assets/scss/core/_module.scss */
 .has-text .dots {
   margin-bottom: 60px;
   margin-top: 60px;
 }
-/* line 62, ../../resources/assets/scss/core/_module.scss */
+/* line 67, ../../resources/assets/scss/core/_module.scss */
 .has-text .actions {
   text-align: center;
 }
 
-/* line 67, ../../resources/assets/scss/core/_module.scss */
+/* line 72, ../../resources/assets/scss/core/_module.scss */
 .next-section {
   display: block;
   width: 50px;
@@ -593,36 +601,36 @@ p a:hover {
   border: 0;
   transform-origin: 50% 50%;
 }
-/* line 81, ../../resources/assets/scss/core/_module.scss */
+/* line 86, ../../resources/assets/scss/core/_module.scss */
 .next-section svg {
   width: 100%;
   height: 100%;
 }
-/* line 84, ../../resources/assets/scss/core/_module.scss */
+/* line 89, ../../resources/assets/scss/core/_module.scss */
 .next-section svg path {
   fill: white;
   transition: fill 0.3s ease;
 }
 
-/* line 93, ../../resources/assets/scss/core/_module.scss */
+/* line 98, ../../resources/assets/scss/core/_module.scss */
 .congrats-section h1 {
   margin-bottom: 40px;
   line-height: 28px;
   letter-spacing: 0.02em;
 }
-/* line 99, ../../resources/assets/scss/core/_module.scss */
+/* line 104, ../../resources/assets/scss/core/_module.scss */
 .congrats-section p {
   max-width: 442px;
   text-align: center;
   margin-bottom: 40px;
   line-height: 26px;
 }
-/* line 106, ../../resources/assets/scss/core/_module.scss */
+/* line 111, ../../resources/assets/scss/core/_module.scss */
 .congrats-section .actions {
   text-align: center;
   margin: 40px 0;
 }
-/* line 111, ../../resources/assets/scss/core/_module.scss */
+/* line 116, ../../resources/assets/scss/core/_module.scss */
 .congrats-section .congrats-container {
   width: 100%;
   height: 100%;
@@ -636,12 +644,12 @@ p a:hover {
   visibility: hidden;
 }
 
-/* line 125, ../../resources/assets/scss/core/_module.scss */
+/* line 130, ../../resources/assets/scss/core/_module.scss */
 .actions {
   text-align: center;
 }
 
-/* line 129, ../../resources/assets/scss/core/_module.scss */
+/* line 134, ../../resources/assets/scss/core/_module.scss */
 .down-arrow {
   border: 0;
   background: none;
@@ -651,17 +659,17 @@ p a:hover {
   display: inline-block;
   cursor: pointer;
 }
-/* line 138, ../../resources/assets/scss/core/_module.scss */
+/* line 143, ../../resources/assets/scss/core/_module.scss */
 .down-arrow svg {
   width: 100%;
   height: 100%;
 }
-/* line 141, ../../resources/assets/scss/core/_module.scss */
+/* line 146, ../../resources/assets/scss/core/_module.scss */
 .down-arrow svg path {
   fill: #f16060;
 }
 
-/* line 147, ../../resources/assets/scss/core/_module.scss */
+/* line 152, ../../resources/assets/scss/core/_module.scss */
 .indicator {
   position: fixed;
   top: 50%;
@@ -672,13 +680,19 @@ p a:hover {
   z-index: 99;
 }
 @media (max-width: 800px) {
-  /* line 147, ../../resources/assets/scss/core/_module.scss */
+  /* line 152, ../../resources/assets/scss/core/_module.scss */
   .indicator {
     width: 50px;
     height: 100px;
   }
 }
-/* line 161, ../../resources/assets/scss/core/_module.scss */
+@media (max-width: 500px) {
+  /* line 152, ../../resources/assets/scss/core/_module.scss */
+  .indicator {
+    display: none;
+  }
+}
+/* line 169, ../../resources/assets/scss/core/_module.scss */
 .indicator .module-icon {
   width: 50px !important;
   height: 50px;
@@ -686,16 +700,16 @@ p a:hover {
   padding: 8px;
   float: right;
 }
-/* line 172, ../../resources/assets/scss/core/_module.scss */
+/* line 180, ../../resources/assets/scss/core/_module.scss */
 .indicator .module-icon svg {
   width: 100%;
   height: 100%;
 }
-/* line 175, ../../resources/assets/scss/core/_module.scss */
+/* line 183, ../../resources/assets/scss/core/_module.scss */
 .indicator .module-icon svg path {
   fill: white;
 }
-/* line 181, ../../resources/assets/scss/core/_module.scss */
+/* line 189, ../../resources/assets/scss/core/_module.scss */
 .indicator .forum-icon {
   width: 110px;
   height: 50px;
@@ -711,36 +725,36 @@ p a:hover {
   background-color: rgba(255, 255, 255, 0.2);
 }
 @media (max-width: 800px) {
-  /* line 181, ../../resources/assets/scss/core/_module.scss */
+  /* line 189, ../../resources/assets/scss/core/_module.scss */
   .indicator .forum-icon {
     background-color: rgba(255, 255, 255, 0.9);
     width: 50px;
     border: none;
   }
 }
-/* line 202, ../../resources/assets/scss/core/_module.scss */
+/* line 210, ../../resources/assets/scss/core/_module.scss */
 .indicator .forum-icon svg {
   width: 25px;
   display: inline-block;
   vertical-align: middle;
   margin-right: 10px;
 }
-/* line 209, ../../resources/assets/scss/core/_module.scss */
+/* line 217, ../../resources/assets/scss/core/_module.scss */
 .indicator .forum-icon svg path {
   fill: #f16060;
 }
 @media (max-width: 800px) {
-  /* line 202, ../../resources/assets/scss/core/_module.scss */
+  /* line 210, ../../resources/assets/scss/core/_module.scss */
   .indicator .forum-icon svg {
     margin: 2px auto;
   }
 }
-/* line 217, ../../resources/assets/scss/core/_module.scss */
+/* line 225, ../../resources/assets/scss/core/_module.scss */
 .indicator .forum-icon span {
   line-height: 21px;
 }
 @media (max-width: 800px) {
-  /* line 217, ../../resources/assets/scss/core/_module.scss */
+  /* line 225, ../../resources/assets/scss/core/_module.scss */
   .indicator .forum-icon span {
     display: none;
   }
@@ -1678,26 +1692,45 @@ div.jqcloud span.w1 {
   margin-left: -125px;
   margin-bottom: 30px;
 }
-/* line 5, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+@media (max-width: 500px) {
+  /* line 1, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+  .limiting-beliefs {
+    margin-left: auto;
+    width: 100%;
+  }
+}
+/* line 10, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .limiting-beliefs .beliefs {
   display: flex;
   justify-content: space-between;
   position: relative;
 }
-/* line 11, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+@media (max-width: 500px) {
+  /* line 10, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+  .limiting-beliefs .beliefs {
+    display: block;
+  }
+}
+/* line 20, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .limiting-beliefs .belief {
   width: 221px;
   height: 256px;
   position: relative;
   display: block;
 }
-/* line 17, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+@media (max-width: 500px) {
+  /* line 20, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+  .limiting-beliefs .belief {
+    margin: 40px auto;
+  }
+}
+/* line 30, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .limiting-beliefs .belief label {
   position: absolute;
   top: 6px;
   left: 10px;
 }
-/* line 23, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 36, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .limiting-beliefs .belief .icon {
   position: absolute;
   bottom: 16px;
@@ -1710,16 +1743,16 @@ div.jqcloud span.w1 {
   border: 0;
   padding: 0;
 }
-/* line 34, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 47, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .limiting-beliefs .belief .icon svg {
   width: 100%;
   height: 100%;
 }
-/* line 37, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 50, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .limiting-beliefs .belief .icon svg path {
   fill: #f16060;
 }
-/* line 43, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 56, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .limiting-beliefs .belief textarea {
   width: 100%;
   height: 100%;
@@ -1733,48 +1766,60 @@ div.jqcloud span.w1 {
   border-image: linear-gradient(23deg, #abafb1 0%, rgba(171, 175, 177, 0) 90%);
   border-image-slice: 1;
 }
-/* line 56, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 69, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .limiting-beliefs .belief textarea:focus {
   background: #f16060;
   color: white;
   border: 0;
 }
-/* line 65, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 78, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .limiting-beliefs .belief textarea:focus + .icon svg path {
   fill: white;
 }
-/* line 69, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 82, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .limiting-beliefs .belief textarea:focus + .icon + label {
   color: white;
 }
-/* line 74, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 87, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .limiting-beliefs .actions {
   margin-top: 60px;
 }
 
-/* line 80, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 93, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .affirmations h1.plain {
   margin-bottom: 30px;
 }
 
-/* line 85, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 98, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations {
   width: 695px;
   margin-left: -125px;
 }
-/* line 88, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 102, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .positive-affirmations-fields {
   display: flex;
   justify-content: space-between;
 }
-/* line 93, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+@media (max-width: 920px) {
+  /* line 102, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+  .positive-affirmations .positive-affirmations-fields {
+    display: block;
+  }
+}
+/* line 111, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-affirmation, .positive-affirmations .the-belief {
   width: 221px;
   height: 256px;
   background-color: transparent;
   position: relative;
 }
-/* line 99, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+@media (max-width: 920px) {
+  /* line 111, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+  .positive-affirmations .the-affirmation, .positive-affirmations .the-belief {
+    margin: auto;
+  }
+}
+/* line 122, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-belief {
   border: 2px solid transparent;
   border-image: linear-gradient(23deg, #abafb1 0%, rgba(171, 175, 177, 0) 90%);
@@ -1784,13 +1829,19 @@ div.jqcloud span.w1 {
   text-align: center;
   margin-bottom: 15px;
 }
-/* line 107, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+@media (max-width: 920px) {
+  /* line 122, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+  .positive-affirmations .the-belief {
+    margin: 15px auto;
+  }
+}
+/* line 135, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-belief .number {
   position: absolute;
   top: 6px;
   left: 10px;
 }
-/* line 112, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 141, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-belief p.limiting-belief-text {
   margin: 0;
   padding: 0;
@@ -1798,17 +1849,17 @@ div.jqcloud span.w1 {
   font-size: 14px;
   line-height: 22px;
 }
-/* line 119, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 149, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-belief strong {
   font-size: 14px;
 }
-/* line 126, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 156, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-affirmation label {
   position: absolute;
   top: 6px;
   left: 10px;
 }
-/* line 132, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 162, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-affirmation .icon {
   position: absolute;
   bottom: 16px;
@@ -1821,16 +1872,16 @@ div.jqcloud span.w1 {
   border: 0;
   padding: 0;
 }
-/* line 143, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 173, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-affirmation .icon svg {
   width: 100%;
   height: 100%;
 }
-/* line 146, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 176, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-affirmation .icon svg path {
   fill: #f16060;
 }
-/* line 152, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 182, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-affirmation textarea {
   width: 100%;
   height: 100%;
@@ -1844,21 +1895,21 @@ div.jqcloud span.w1 {
   border-image: linear-gradient(23deg, #abafb1 0%, rgba(171, 175, 177, 0) 90%);
   border-image-slice: 1;
 }
-/* line 161, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 192, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-affirmation textarea:focus {
   background: #f16060;
   color: white;
   border: 0;
 }
-/* line 173, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 204, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-affirmation textarea:focus + .icon svg path {
   fill: white;
 }
-/* line 178, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 209, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-affirmation textarea:focus + label {
   color: white;
 }
-/* line 182, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 213, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .actions {
   margin-top: 60px;
 }
