--- a/resources/assets/scss/core/_module.scss
+++ b/resources/assets/scss/core/_module.scss
@@ -6,6 +6,7 @@
         width: 100%;
         height: 100%;
         visibility: hidden;
+        min-width: 320px;
 
         > .inner {
             display:flex;
@@ -51,6 +52,10 @@
             line-height: 26px;
             color: $fontColour;
             padding: 40px 0 60px 0;
+            @include breakpoint($brk-small) {
+                width: 100%;
+                padding: 60px $gutter $gutter;
+            }
         }
     }
 
@@ -156,6 +161,9 @@
     @include breakpoint($break-800) {
         width: 50px;
         height: 100px;
+    }
+    @include breakpoint($brk-small) {
+        display: none;
     }
 
     .module-icon {
