--- a/resources/assets/scss/pages/home/_home.scss
+++ b/resources/assets/scss/pages/home/_home.scss
@@ -4,10 +4,18 @@
         height: 100%;
     }
 
-    .display-video {
+    .video-wrapper {
         position:absolute;
         top: 0;
         left: 0;
+        right: 0;
+        bottom: 0;
+    }
+
+    .display-video {
+        margin-left: 50%;
+        transform: translate3d(-50%, 0, 0);
+        backface-visibility: hidden;
         min-width: 100%;
         min-height: 100%;
     }
